# Seed

./: .gitignore  .pylintrc  README.md  meson.build  org.thecodenomad.seeds.json  pyproject.toml
.github/workflows/: build.yml
data/: meson.build  org.thecodenomad.seeds.desktop.in  org.thecodenomad.seeds.gschema.xml  org.thecodenomad.seeds.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
seed/: __init__.py  common.py  errors.py  models.py
seed/models/: __init__.py  asset.py  descriptor.py  main_seed.py
src/: main.blp  main.py  meson.build  seeds.gresource.xml  seeds.in  window.py  window.ui
src/seed/: errors.py
src/seed/models/: __init__.py  descriptor.py  strict.py
src/view/: window.blp  window.py
tests/: conftest.py  test_asset.py  test_common.py  test_descriptor.py  test_mainseed.py
tests/data/: basic.json  basic_asset.json  basic_descriptor.json  invalid_assets_level_up.json  invalid_assets_next_fib.json  invalid_desc_level_up.json  invalid_desc_next_fib.json
