[tool.poetry]
name = "seed"
version = "0.1.1"
description = "Writer helper"
authors = ["codenomad <codenomad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.0"
pylint = "^3.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pyright = "^1.1.379"
pytest-cov = "^5.0.0"
black = "^24.8.0"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--cov=seed -s"
markers = [
    "asset: Asset model tests",
    "descriptor: Descriptor model tests",
    "wip: work in progress tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 127

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = ["seed/__init__.py:__version__"]
version_pattern = ["README.md:rev: v{version}"]
major_on_zero = false
branch = "main"
upload_to_PyPI = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
