[tool.poetry]
name = "seed"
version = "0.1.0"
description = "Writer helper"
authors = ["codenomad <codenomad@gmail.com>"]
readme = "README.md"

[project]
name = "seed"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.0"
pylint = "^3.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pyright = "^1.1.379"
pytest-cov = "^5.0.0"
black = "^24.8.0"
pylint = "^3.2.7"


[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "--cov=seed -s"
markers = [
    "asset: Asset model tests",
    "descriptor: Descriptor model tests",
    "wip: work in progress tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 127

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
tag-branch = "main"

[tool.poetry-dynamic-versioning.files."seed/__init__.py"]
persistent-substitution = true
initial-content = """
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""
