[tool.poetry]
name = "seed"
version = "0.1.9"
description = "Writer helper"
authors = ["codenomad <codenomad@gmail.com>"]
readme = "README.md"

[project]
name = "seed"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.0"
pylint = "^3.2.7"
importlib-metadata = "^8.4.0"
pygobject = "^3.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pyright = "^1.1.379"
pytest-cov = "^5.0.0"
black = "^24.8.0"
pylint = "^3.2.7"

[tool.poetry.group.release.dependencies]
semantic-versioning = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [ "src", "test" ]
addopts = "--cov=seed -s --ignore=subprojects"
markers = [
    "asset: Asset model tests",
    "descriptor: Descriptor model tests",
    "wip: work in progress tests",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 127
